# madlib-cli

./: pyproject.toml
madlib_cli/: madlib.py
madlib_cli.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_madlib.py
