[tool.poetry]
name = "madlib-cli"
version = "0.1.0"
description = ""
authors = ["vmmaddel <64039230+vmmaddel@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
